--- a/src/utils/base-styles.css
+++ b/src/utils/base-styles.css
@@ -22,6 +22,10 @@ h3 {
   @apply text-l text-secondary font-display mt-8;
 }
 
+h4 {
+  @apply text-base text-secondary font-display mt-6 mb-2;
+}
+
 ul {
   @apply ml-4 mt-8;
 }
