update booking info

--- a/src/utils/base-styles.css
+++ b/src/utils/base-styles.css
@@ -33,3 +33,7 @@ ul {
 li {
   @apply font-body text-base mt-6 text-secondary border-l-2 border-tertiary pl-4;
 }
+
+td {
+  @apply font-body border-primary border-2 py-2 px-4;
+}
